# VulRL

./: .gitattributes  .gitignore  CHANGELOG.md  CPU_AND_GPU_REQUIREMENT.md  README.md  README_CTFMIX.md  copy_commit_chage_to_server.sh  interactive_poc_generator_1.py  requirements.txt  run_skyrl_one_click.sh
dataset/: README.md  available_cases.txt  concat_parquets.py  create_vulhub_rce_parquet.py  ctf_docker_case_extract.py  ctf_docker_cybench_cases.txt  ctf_docker_nyu_cases.txt  ctf_docker_nyu_subtask_cases.txt  dataset_converter.py  dataset_converter_ctf.py  dataset_converter_ctf_fake_test.py  dataset_converter_test.py  dataset_converter_v2.py  interactive_poc_generator.py  remove_case_record.py  remove_false_positives.sh  run_create_vulhub_rce_parquet.sh  run_inter_poc_gen.sh  run_inter_poc_gen_batch.sh  true_positives_v4.txt  vulhub_dataset_builder.py
infra/: UNIFIED_ENV_GUIDE.md  audit_ctf_benchmarks.py  ctf_adapter.py  ctfmix_run.py  cve_exploit_env.py  main_training.py  requirements.txt  security_env.py  (+4 more)
infra_v4/: README.md  infra_v4_prompt.txt  pyproject.toml  rl_launcher.py  tasks_cvebench.json  tasks_vulhub.json  tasks_xbow.json  test_trained_model.py
infra_v4/src/vulrl/docker/adapters/: __init__.py  vulhub_adapter.py
infra_v4/src/vulrl/env/: env_registry.py
infra_v4/src/vulrl/model/: __init__.py  checkpoint_manager.py  lora_loader.py
infra_v4/src/vulrl/parallel/: __init__.py  process_coordinator.py  progress_monitor.py  ray_config.py
infra_v4/src/vulrl/reward/: reward_router.py
infra_v4/src/vulrl/skyrl/: __init__.py  skyrl_wrapper.py
(+1163 files in other folders)
