[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulrl"
version = "4.0.0"
description = "VulRL - Reinforcement Learning for Vulnerability Exploitation (v4)"
requires-python = ">=3.9"
dependencies = [
    "tqdm>=4.66.0",
    "gymnasium>=0.29.0",
    "docker>=6.0.0",
    "pyyaml>=6.0",
    "ray>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.5.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vulrl = ["py.typed"]
